--- a/multitask/src/pages/home/home.scss
+++ b/multitask/src/pages/home/home.scss
@@ -1,3 +1,21 @@
 page-home {
-
+	.nsb-list li {
+		height: 36px;
+		line-height: 36px;
+		margin-top: 4px;
+	}
+	.nsb-list li:active {
+		background: #f8f8f8;
+	}
+	.nsb-button {
+		text-align: center;
+		font-size: 1.6em;
+		width: 40px;
+		height: 40px;
+		line-height: 40px;
+		margin: 0 auto;
+	}
+	.nsb-button:active {
+		background: #f8f8f8;		
+	}
 }
