--- a/multitask/src/pages/home/home.scss
+++ b/multitask/src/pages/home/home.scss
@@ -8,14 +8,19 @@ page-home {
 		background: #f8f8f8;
 	}
 	.nsb-button {
+		border-radius: 60px;
 		text-align: center;
-		font-size: 1.6em;
-		width: 40px;
-		height: 40px;
-		line-height: 40px;
+		font-size: 2em;
+		width: 60px;
+		height: 60px;
+		line-height: 60px;
 		margin: 0 auto;
 	}
 	.nsb-button:active {
-		background: #f8f8f8;		
+		background: #f8f8f8;
+		border: 1px solid #cccccc;
+	}
+	.set-done {
+		text-decoration: line-through;
 	}
 }
