--- a/multitask/src/pages/home/home.scss
+++ b/multitask/src/pages/home/home.scss
@@ -1,7 +1,7 @@
 page-home {
 	.nsb-list li {
-		height: 36px;
-		line-height: 36px;
+		height: 3em;
+		line-height: 3em;
 		margin-top: 4px;
 	}
 	.nsb-list li:active {
@@ -18,9 +18,9 @@ page-home {
 	}
 	.nsb-button:active {
 		background: #f8f8f8;
-		border: 1px solid #cccccc;
 	}
 	.set-done {
 		text-decoration: line-through;
+		opacity: 0.6;
 	}
 }
